Fix patch renderer unit-test failures (accomodate line number anchors)
git-svn-id: http://svn.edgewall.org/repos/trac/trunk@4596 af82e41b-90c4-0310-8c96-b1721e28e2e2

--- a/trac/mimeview/tests/patch.html
+++ b/trac/mimeview/tests/patch.html
@@ -25,10 +25,12 @@
               <thead>
                 <tr>
                   <th title="File README.orig 2006-10-27 14:42:04.062500000 +0200">
-                    <a>old</a>
+                    <a href="#L1">
+                      old</a>
                   </th>
                   <th title="File README 2006-10-27 14:42:28.125000000 +0200">
-                    <a>new</a>
+                    <a href="#L1">
+                      new</a>
                   </th>
                   <th> </th>
                 </tr>
@@ -75,10 +77,12 @@
               <thead>
                 <tr>
                   <th title="File nonewline 2006-10-27 08:36:48.453125000 +0200">
-                    <a>a</a>
+                    <a href="#L1">
+                      a</a>
                   </th>
                   <th title="File newline 2006-10-27 08:36:57.187500000 +0200">
-                    <a>b</a>
+                    <a href="#L1">
+                      b</a>
                   </th>
                   <th>&nbsp;</th>
                 </tr>
@@ -111,10 +115,12 @@
               <thead>
                 <tr>
                   <th title="File newline 2006-10-27 08:36:57.187500000 +0200">
-                    <a>a</a>
+                    <a href="#L1">
+                      a</a>
                   </th>
                   <th title="File nonewline 2006-10-27 08:36:48.453125000 +0200">
-                    <a>b</a>
+                    <a href="#L1">
+                      b</a>
                   </th>
                   <th> </th>
                 </tr>
